# sahara-dashboard

./: .coveragerc  .gitignore  .gitreview  .mailmap  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  babel-djangojs.cfg  bindep.txt  lower-constraints.txt  manage.py  openstack-common.conf  other-requirements.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
doc/: requirements.txt
playbooks/sahara-dashboard-integration/: pre.yaml  run.yaml
releasenotes/notes/: apiv2-dashboard-dd3f97bc15ea609e.yaml  cluster-details-fix-4c53edfa60500d8a.yaml  designate-integration-0c11bb8cc115cf60.yaml  django_data_upload_max_number-3fe39c838c275587.yaml  drop-py-2-7-0812be5ce1752d7c.yaml  increase-max-fields-91b921991f1e8978.yaml  more-apiv2-features-7e02b39be1b875fd.yaml  rename-SAHARA_AUTO_IP_ALLOCATION_ENABLED-config-parameter.yaml  start-using-reno-c29d489e7e7dafc9.yaml
releasenotes/source/: conf.py  index.rst  mitaka.rst
sahara-dashboard/test/: settings.py
sahara_dashboard/: exceptions.py  utils.py  version.py
sahara_dashboard/api/: __init__.py  designate.py  manila.py  sahara.py
sahara_dashboard/enabled/: _1810_data_processing_panel_group.py  _1815_data_processing_wizard_panel.py  _1820_data_processing_clusters_panel.py  _1825_data_processing_job_executions_panel.py  _1830_data_processing_cluster_templates_panel.py  _1830_data_processing_plugins_panel.py  _1835_data_processing_nodegroup_templates_panel.py  _1840_data_processing_jobs_panel.py  _1845_data_processing_job_binaries_panel.py  _1850_data_processing_data_sources_panel.py  _1855_data_processing_data_image_registry_panel.py  _1860_data_processing_data_plugins_panel.py
sahara_dashboard/local_settings.d/: _12_toggle_data_upload_max_number_fields.py
sahara_dashboard/locale/: django.pot  djangojs.pot
sahara_dashboard/test/: helpers.py  settings.py  urls.py
saharadashboard/: dashboard.py  version.py
saharadashboard/api/: client.py  helpers.py
saharadashboard/cluster_templates/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
saharadashboard/clusters/: panel.py  (+4 more)
savannadashboard/: dashboard.py  version.py
tools/: clean_enabled_files.py  install_venv.py  pip_install.sh  test-requires  tox_install.sh  with_venv.sh
(+567 files in other folders)
